# who-to-punish

./: .gitignore  CHANGELOG.md  README.md  experiment_default.py  pyproject.toml
examples/: 01_basic_replication.py  02_random_personalities.py  03_skewed_population.py  04_custom_traits.py  05_named_profiles.py  06_hybrid_humans_bots.py  07_validate_personalities.py  hybrid_session.py
papers/TEMPLATE/: README.md  __init__.py  analyze.py  experiment.py  run.py
papers/ertan2009/: __init__.py  analyze.py  compare.py  config.py  experiment.py  fig_personality.py  figures.py  run.py  run_v2.py
papers/ertan2009/legacy/: README.md  figures_canonical_v1.py  figures_v1.py  run_v1.py
papers/ertan2009/legacy/replicated_v1/: paper.tex  refs.bib
papers/ertan2009/replicated/: paper.tex  refs.bib
papers/ertan2009/results/: comparison.json  default_raw.json  otree_cooperative_flat.csv  otree_cooperative_raw.json  otree_ertan2009_v2.csv  otree_random_flat.csv  stats_summary.txt
papers/ertan2009/results_v2/: random_raw.json  run_summary.json
src/framework/: __init__.py  experiment.py  personalities.py
src/framework/otree/: __init__.py  __main__.py  bot.py  client.py  parser.py  translator.py
src/papers/ertan2009/: compare.py  experiment.py  validate_personality.py
src/replicant/: __init__.py  cli.py  play.py  preflight.py
src/replicant/analysis/: __init__.py  comparison.py  cost.py  stats.py
src/replicant/experiments/: runner.py
src/replicant/otree/: __init__.py  bot.py  client.py  export.py  hybrid.py
tests/otree_server/: settings.py
tests/otree_server/ertan2009/: Baseline.html  Done.html  Punishment.html  Regimes.html  Voting.html  __init__.py
tests/unit/: test_analysis.py  test_imports.py  test_personalities.py
(+14 files in other folders)
